In line 314: All Bootstrap JS files removed, bootstrap.min.js added

--- a/qa-theme/qa-bootstrap/qa-styles.css
+++ b/qa-theme/qa-bootstrap/qa-styles.css
@@ -1,7 +1,7 @@
 /*
 	Theme URI: 
-	Theme Version: 1.0a
-	Theme Date: 2012-10-31
+	Theme Version: 1.1
+	Theme Date: 2012-12-04
 	Theme Author: Harsh J. Vakharia
 	Theme Author URI: https://github.com/harshjv
 	Theme License: GPLv2
