--- a/qa-theme/qa-bootstrap/lib/custom.css
+++ b/qa-theme/qa-bootstrap/lib/custom.css
@@ -196,7 +196,7 @@ hr.soften {
   right: 0;
   bottom: 0;
   left: 0;
-  background: url(../img/bs-docs-masthead-pattern.png) repeat center center;
+  background: url(bs-docs-masthead-pattern.png) repeat center center;
   opacity: .4;
 }
 
@@ -816,7 +816,7 @@ form.bs-docs-example {
 }
 .bs-docs-sidenav .active .icon-chevron-right,
 .bs-docs-sidenav .active a:hover .icon-chevron-right {
-  background-image: url(../img/glyphicons-halflings-white.png);
+  background-image: url(glyphicons-halflings-white.png);
   opacity: 1;
 }
 .bs-docs-sidenav.affix {
@@ -1022,7 +1022,8 @@ form.bs-docs-example {
   }
 }
 
-/* MY CUSTOMIZATION*/
+
+/* Something Extra */
 
 
 .InlineTags a:after {
@@ -1076,14 +1077,11 @@ form.bs-docs-example {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
 
-/*USER NAME TAGS*/
-
 .UserNameTags a {
-    background: none repeat scroll 0 0 #777777;
+    background: none repeat scroll 0 0 #3A87AD;
     border-radius: 4px 4px 4px 4px;
     color: #FFFFFF;
     font-weight: bold;
-    margin-left: 5px;
     padding: 0 10px 0 9px;
     text-decoration: none;
 }
@@ -1105,8 +1103,6 @@ form.bs-docs-example {
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
 
-/*NEW*/
-
 .TitleName {
 	width:670px;
 }
@@ -1115,4 +1111,19 @@ form.bs-docs-example {
 	font-size: 18px;
 	line-height: 1.1;
 	position: relative;
+}
+
+.meta-tags-info {
+    background-color: #FCF8E3;
+    border: 1px solid #FBEED5;
+    border-radius: 4px 4px 4px 4px;
+    color: #C09853;
+    margin-bottom: 20px;
+    padding: 4px 14px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
+
+img {
+    border-radius: 5px 5px 5px 5px;
 }
